Added JWT authentication, custom filter, role-based authorization, and secured APIs