@@ -1,9 +1,10 @@
 package com.mohit.jobportal.config;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -26,6 +27,8 @@ public class JwtFilter extends OncePerRequestFilter {
 	protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
 			throws ServletException, IOException {
 		
+		System.out.println("JWT FILTER CALLED");
+		
 		String authHeader = request.getHeader("Authorization");
 		
 		if (authHeader != null && authHeader.startsWith("Bearer ")) {
@@ -37,12 +40,16 @@ public class JwtFilter extends OncePerRequestFilter {
 				
 				if (email != null && jwtUtil.validateToken(token)) {
 					
-					// This is the main Step
+					String role = jwtUtil.extractRole(token);
+					System.out.println("ROLE FROM TOKEN: " + role);
+					
 					UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
 								email, 
 								null, 
-								Collections.emptyList()
+								List.of(new SimpleGrantedAuthority(role))
+								
 							);
+					
 					
 					SecurityContextHolder.getContext().setAuthentication(authToken);
 				}
